[gd_scene load_steps=10 format=3 uid="uid://nimh1bl6ma2t"]

[ext_resource type="Script" uid="uid://dk6kvixsc3ekc" path="res://hud.gd" id="1_hl0vy"]
[ext_resource type="Theme" uid="uid://doxy1cjbx2ust" path="res://PinkTheme.tres" id="1_kva55"]
[ext_resource type="Texture2D" uid="uid://b7t1rrf0tegln" path="res://assets/sprites/GUI/HUD/fly.png" id="2_hl0vy"]
[ext_resource type="Texture2D" uid="uid://bkmtx8ph2qrau" path="res://assets/sprites/GUI/HUD/arrow.png" id="3_o7pky"]
[ext_resource type="Texture2D" uid="uid://dvv25otgyv78a" path="res://assets/sprites/GUI/backgrounds/AssemblerBackground2.png" id="5_o7pky"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ivsqa"]
texture = ExtResource("2_hl0vy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrvux"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vrrjv"]
texture = ExtResource("3_o7pky")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qrvux"]
texture = ExtResource("5_o7pky")
modulate_color = Color(0.162066, 0.162066, 0.162066, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hl0vy")

[node name="BackgroundImage" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlyEnergyCount" type="Panel" parent="."]
layout_mode = 1
offset_right = 256.0
offset_bottom = 96.0
theme = ExtResource("1_kva55")

[node name="FlySprite" type="Panel" parent="FlyEnergyCount"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = 24.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ivsqa")

[node name="Label" type="Label" parent="FlyEnergyCount/FlySprite"]
layout_mode = 1
offset_left = 64.0
offset_right = 176.0
offset_bottom = 48.0
theme_type_variation = &"HeaderMedium"
text = ": 10"
vertical_alignment = 1

[node name="TimeDisplay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 96.0
grow_horizontal = 0
theme = ExtResource("1_kva55")

[node name="TimeCount" type="Label" parent="TimeDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 42.0
grow_horizontal = 2
theme_type_variation = &"HeaderSmall"
text = "DAY 0 - EVENING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Location" type="Label" parent="TimeDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -42.0
offset_right = 105.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "[ The Swimming Hole ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DividerPanel" type="Panel" parent="TimeDisplay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qrvux")

[node name="PhoneButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -96.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_kva55")
text = "PHONE"

[node name="Arrow" type="Panel" parent="PhoneButton"]
layout_mode = 0
offset_left = 232.0
offset_top = -32.0
offset_right = 280.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vrrjv")

[node name="PhoneScreen" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 128.0
offset_right = 200.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_qrvux")

[node name="GridContainer" type="GridContainer" parent="PhoneScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CancelPhoneButton" type="Button" parent="PhoneScreen/GridContainer"]
layout_mode = 2
text = "PUT AWAY"

[connection signal="pressed" from="PhoneButton" to="." method="_on_phone_button_pressed"]
[connection signal="pressed" from="PhoneScreen/GridContainer/CancelPhoneButton" to="." method="_on_cancel_phone_button_pressed"]
